Kubernetes/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp
  namespace: _{_NAMESPACE_}_
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"

spec:
  rules:
    - host: myapp._{_INGRESS_HOSTNAME_}_.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: myapp
                port:
                  number: 8080
  tls:
    - hosts:
        - myapp._{_INGRESS_HOSTNAME_}_.nip.io
      secretName: ingress-local-tls
